--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "divnotes-senior-frontend-developer-challenge-movie-search",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
-  }
+    "name": "divnotes-senior-frontend-developer-challenge-movie-search",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix"
+    },
+    "dependencies": {
+        "next": "14.0.4",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@fullstacksjs/eslint-config": "^10.7.0",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8.55.0",
+        "prettier": "^3.1.0",
+        "typescript": "5.0.2"
+    }
 }
