--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix"
     },
     "dependencies": {
+        "@tanstack/query-core": "5.13.4",
+        "@tanstack/react-query": "5.13.4",
+        "@tanstack/react-query-next-experimental": "5.13.4",
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0"
