--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix"
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+        "orval": "orval --config scripts/orval.config.ts"
     },
     "dependencies": {
         "@tanstack/query-core": "5.13.4",
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
+        "@types/lodash": "4.14.202",
+        "axios": "1.6.2",
+        "lodash": "4.17.21",
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0"
@@ -22,6 +26,7 @@
         "@types/react": "18.2.43",
         "@types/react-dom": "18.2.17",
         "eslint": "8.55.0",
+        "orval": "6.21.0",
         "prettier": "3.1.0",
         "typescript": "5.0.2"
     }
