--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@tanstack/query-core": "5.13.4",
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
-        "@types/lodash": "4.14.202",
         "axios": "1.6.2",
         "lodash": "4.17.21",
         "next": "14.0.4",
@@ -31,6 +30,7 @@
         "eslint": "8.55.0",
         "orval": "6.21.0",
         "prettier": "3.1.0",
-        "typescript": "5.0.2"
+        "typescript": "5.0.2",
+        "@types/lodash": "4.14.202"
     }
 }
