--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-        "orval": "orval --config scripts/orval.config.ts"
+        "orval": "orval --config scripts/orval.config.ts",
+        "release": "standard-version"
     },
     "dependencies": {
         "@hookform/resolvers": "3.3.2",
@@ -37,6 +38,7 @@
         "postcss-preset-mantine": "1.11.1",
         "postcss-simple-vars": "7.0.1",
         "prettier": "3.1.0",
+        "standard-version": "9.5.0",
         "typescript": "5.0.2"
     }
 }
