feat: :sparkles: implement next-auth credentials as main authentication strategy

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "1.6.2",
         "lodash": "4.17.21",
         "next": "14.0.4",
+        "next-auth": "4.24.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.48.2",
