--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
             "~~/configs/*": ["./configs/*"]
         }
     },
-    "include": ["**.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "**.d.ts",
+        "@types",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts"
+    ],
     "exclude": ["node_modules"]
 }
