feat: add a mocked user data to login page
add user data

add fixtures path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         ],
         "paths": {
             "@/*": ["./src/*"],
-            "~~/configs/*": ["./configs/*"]
+            "~~/configs/*": ["./configs/*"],
+            "~~/fixtures/*": ["./fixtures/*"]
         }
     },
     "include": [
