--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
         "axios": "1.6.2",
+        "is-url": "1.2.4",
         "lodash": "4.17.21",
         "next": "14.0.4",
         "next-auth": "4.24.5",
@@ -32,6 +33,7 @@
     },
     "devDependencies": {
         "@fullstacksjs/eslint-config": "10.7.0",
+        "@types/is-url": "1.2.32",
         "@types/lodash": "4.14.202",
         "@types/node": "20.10.4",
         "@types/react": "18.2.43",
