--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "lodash": "4.17.21",
         "next": "14.0.4",
         "next-auth": "4.24.5",
+        "next-query-params": "5.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.48.2",
+        "use-query-params": "2.2.1",
         "yup": "1.3.2"
     },
     "devDependencies": {
