fix: :bug: fix relase commands

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
         "orval": "orval --config scripts/orval.config.ts",
         "release": "standard-version",
-        "release:major": "yarn release --release-as minor",
+        "release:major": "yarn release --release-as major",
         "release:minor": "yarn release --release-as minor",
-        "release:patch": "yarn release --release-as minor"
+        "release:patch": "yarn release --release-as patch"
     },
     "dependencies": {
         "@hookform/resolvers": "3.3.2",
