--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
         "prettier": "3.1.0",
         "standard-version": "9.5.0",
         "typescript": "5.0.2"
+    },
+    "standard-version": {
+        "skip": {
+            "changelog": true
+        }
     }
 }
