--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "next-query-params": "5.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-error-boundary": "4.0.12",
         "react-hook-form": "7.48.2",
         "use-query-params": "2.2.1",
         "yup": "1.3.2"
