--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+NEXTAUTH_SECRET=""
 NEXT_PUBLIC_JsonPlaceholder_API_URL=""
 NEXT_PUBLIC_OMDB_API_URL=""
 NEXT_PUBLIC_OMDB_API_KEY=""
-NEXTAUTH_SECRET=""
+NEXT_PUBLIC_TMDB_API_URL=""
+NEXT_PUBLIC_TMDB_API_KEY=""
+NEXT_PUBLIC_TMDB_IMAGES_BASEPATH=""
