--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
         "axios": "1.6.2",
+        "dayjs": "1.11.10",
         "is-url": "1.2.4",
         "lodash": "4.17.21",
         "next": "14.0.4",
