refactor: :recycle: refactor MovieSearch to use TMDB api

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mantine/core": "7.3.1",
         "@mantine/hooks": "7.3.1",
         "@mantine/modals": "7.3.1",
+        "@react-hook/window-size": "3.1.1",
         "@tanstack/query-core": "5.13.4",
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
