--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "rimraf ./.netx && next build",
         "start": "next start",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
         "orval": "orval --config scripts/orval.config.ts",
@@ -49,6 +49,7 @@
         "postcss-preset-mantine": "1.11.1",
         "postcss-simple-vars": "7.0.1",
         "prettier": "3.1.0",
+        "rimraf": "5.0.5",
         "standard-version": "9.5.0",
         "typescript": "5.0.2"
     },
