--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "18.2.0",
         "react-error-boundary": "4.0.12",
         "react-hook-form": "7.48.2",
+        "use-local-storage": "3.0.0",
         "use-query-params": "2.2.1",
         "yup": "1.3.2"
     },
