--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mantine/hooks": "7.3.1",
         "@mantine/modals": "7.3.1",
         "@react-hook/window-size": "3.1.1",
+        "@tabler/icons-react": "2.44.0",
         "@tanstack/query-core": "5.13.4",
         "@tanstack/react-query": "5.13.4",
         "@tanstack/react-query-next-experimental": "5.13.4",
