feat: rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "divnotes-senior-frontend-developer-challenge-movie-search",
+    "name": "movie-search",
     "version": "0.7.0",
     "private": true,
     "scripts": {
